Initial commit: Portfolio de Coulibaly Cheick Ahmed

--- a/pages/about.html
+++ b/pages/about.html
@@ -36,7 +36,7 @@
 
             <div class="about-image">
                 <div class="image-wrapper">
-                    <img src="../images/me.png" alt="Coulibaly Cheick Ahmed">
+                    <img src="../images/ccame.png" alt="Coulibaly Cheick Ahmed">
                 </div>
             </div>
         </div>
